fix: bullet styling and spacing

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -8,7 +8,8 @@
   width: 100%;
 }
 
-.about p {
+.about p,
+.about li {
   font-size: 14px;
 }
 
